--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\AC31846\\Desktop\\java\\Assignment1","type":"PROJECT","hints":{"PROJECT_NAME":"Assignment1"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_92","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_92","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\AC31846\\Desktop\\java\\Assignment2","type":"PROJECT","hints":{"PROJECT_NAME":"Assignment2"}},"ABSENT"]]
